Genre search functionality finished